# booktx

./: .codecrate.toml  .gitignore  .planledger.toml  .ruff.toml  .taskledger.toml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
.releaseledger/ledgers/main/events/: events.jsonl
.releaseledger/ledgers/main/indexes/: entries.json  releases.json
.releaseledger/ledgers/main/releases/v0.2.0/: release.md
.releaseledger/ledgers/main/releases/v0.2.0/audit/: commit-audit.yaml
.releaseledger/ledgers/main/releases/v0.2.0/entries/: entry-0001.md  entry-0002.md  entry-0003.md  entry-0004.md  entry-0005.md  entry-0006.md  entry-0007.md  entry-0008.md  entry-0009.md  entry-0010.md  entry-0011.md  entry-0012.md  entry-0013.md
.releaseledger/ledgers/main/releases/v0.3.0/: release.md
.releaseledger/ledgers/main/releases/v0.3.0/entries/: entry-0001.md  entry-0002.md  entry-0003.md  entry-0004.md  entry-0005.md  entry-0006.md  entry-0007.md  entry-0008.md  entry-0009.md  entry-0010.md  entry-0011.md  entry-0012.md  entry-0013.md
.releaseledger/ledgers/main/releases/v0.3.1/: release.md
.releaseledger/ledgers/main/releases/v0.3.1/entries/: entry-0001.md  entry-0002.md  entry-0003.md  entry-0004.md  entry-0005.md  entry-0006.md  entry-0007.md  entry-0008.md
booktx/: __init__.py  acceptance.py  acceptance_preflight.py  agent_todo.py  agents_md.py  build.py  chapters.py  chunking.py  cli.py  cli_support.py  command_hints.py  config.py  context.py  context_organization.py  context_packs.py  editor_indexes.py  epub_inline_xhtml.py  epub_io.py  epub_manifest.py  epub_output_policy.py  epub_preflight.py  epub_toc_audit.py  errors.py  glossary_audit.py  glossary_match.py  html_io.py  identity.py  inline_audit.py  judge_acceptance.py  judge_store.py  judge_tasks.py  markdown_io.py  models.py  pass_through.py  path_display.py  path_ids.py  placeholders.py  profile_migration.py  qa_scan.py  record_refs.py  (+17 more)
booktx/commands/: __init__.py  agents.py  context.py  judge.py  source.py  translate.py
booktx/data/: common_lemmas_en.txt
booktx/workflows/: __init__.py  agents.py  context.py  judge.py  root.py  source.py  translate.py
docs/: agent-workflow.md  api.md  architecture.md  build.sh  commands.md  concepts.md  conf.py  context.md  development.md  epub.md  index.md  markdown.md  mypy-baseline.md  profiles.md  project-layout.md  quickstart.md  translation-contract.md  troubleshooting.md
docs/architecture/: canonical-store-split.md
skills/booktx/: SKILL.md
spinetx/: build.py  chunking.py  html_io.py  validate.py
tests/: __init__.py  test_acceptance.py  test_agents_md.py  test_build.py  test_chapters.py  test_chunking.py  test_cli.py  test_cli_chapters.py  test_cli_command_boundary.py  test_cli_context.py  test_cli_context_pack.py  test_cli_isolation.py  test_cli_large_chapter.py  test_cli_phase3_translate.py  test_cli_review.py  test_cli_source_analysis.py  test_cli_translate.py  test_cli_translate_todo.py  test_config.py  test_context_io.py  test_context_models.py  test_context_organization.py  test_context_packs.py  test_docs_consistency.py  test_editor_indexes.py  test_epub_inline_xhtml.py  test_epub_io.py  test_epub_output_policy.py  test_epub_toc_audit.py  test_glossary_enforcement.py  test_html_io.py  test_judge.py  test_markdown_io.py  test_models.py  test_pass_through.py  test_path_ids.py  test_placeholders.py  test_profile_migration.py  test_profiles.py  test_progress.py  (+15 more)
tests/book/.booktx/: names.json  profile-state.json  source-config.toml  source-manifest.json
tests/book/.booktx/chunks/: 0001.json
tests/book/.booktx/reports/: chapter-audit.json
tests/book/source/: book.epub
tests/book/translations/de_default/: .booktx-profile.json  config.toml  identity.json
tests/book/translations/de_default/translated/: 0001.json
