[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "booktx"
dynamic = ["version"]
description = "Deterministic CLI that prepares Markdown and EPUB documents for translation by a coding agent."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = { paths = ["LICENSE"] }
authors = [{ name = "booktx contributors" }]
keywords = ["translation", "epub", "markdown", "cli", "localization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "typer",
    "rich",
    "pydantic>=2",
    "tomli-w",
    "tomli; python_version < \"3.11\"",
    "beautifulsoup4",
    "markdown-it-py",
    "phrasplit",
    "epub2text>=0.2.4",
    "text2epub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
booktx = "booktx.cli:app"

[project.urls]
Homepage = "https://github.com/booktx/booktx"
Repository = "https://github.com/holgern/booktx"
Issues = "https://github.com/holgern/booktx/issues"
Changelog = "https://github.com/holgern/booktx/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
# Non-src layout: the package lives at ./booktx
packages = ["booktx"]

[tool.hatch.build.targets.sdist]
include = ["booktx", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "booktx/_version.py"

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
