[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "booktx"
dynamic = ["version"]
description = "Deterministic CLI that prepares Markdown and EPUB documents for translation by a coding agent."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [{ name = "booktx contributors" }]
keywords = ["translation", "epub", "markdown", "cli", "localization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "typer",
    "rich",
    "pydantic>=2",
    "tomli-w",
    "tomli; python_version < \"3.11\"",
    "beautifulsoup4",
    "markdown-it-py",
    "phrasplit>=0.3.3",
    "epub2text>=0.2.7",
    "text2epub>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ebooklib",
    "mypy",
]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
]

[project.scripts]
booktx = "booktx.cli:main"

[project.urls]
Homepage = "https://github.com/buchwandler/booktx"
Repository = "https://github.com/buchwandler/booktx"
Issues = "https://github.com/buchwandler/booktx/issues"
Changelog = "https://github.com/buchwandler/booktx/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
# Non-src layout: the package lives at ./booktx
packages = ["booktx"]

[tool.hatch.build.targets.sdist]
include = ["booktx", "tests", "docs", "skills", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "booktx/_version.py"

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
